# ddp-util

dask/: Makefile  README.md  pyproject.toml
dask/src/dask/: __init__.py
dask/src/daskutil/auth/: __init__.py  gcp.py
dask/src/daskutil/cluster/: __init__.py  gcp_cloudprovider.py  manager.py
dask/tests/integration/: test_gcp_cloudprovider.py
dask/tests/unit/: test_gcp_cloudprovider.py  test_gcp_cloudprovider_only.py
faas/: .envrc  README.md  pyproject.toml
faas/src/faasutil/adapters/gcp/: deployment.py  invocation.py
faas/src/faasutil/core/: __init__.py  ports.py
faas/src/faasutil/core/domain/: function.py
faas/src/faasutil/providers/: gcp.py
faas/tests/: test_gcp_deployment.py
faas/tests/integration/: test_gcp_integration.py
faas/tests/unit/: test_gcp_invocation.py  test_gcp_provider.py
ray/: .envrc  README.md  cluster_config.yaml  pyproject.toml  ray_config.py  ray_job_submitter.py  run_ray_gcp.sh  submit_test.py
ray/data/: edges.tsv
ray/tests/: test_connection.py  test_ray.ipynb  test_ray_data.py  test_ray_data_simple.py  test_ray_direct.py  test_ray_local.py  test_ray_simple.py
