[project]
name = "daskutil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayat Aboalnaga", email = "ayat.aboalnaga@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dask = "dask:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
