[project]
name = "faasutil"
version = "0.1.0"
description = "Google Cloud Functions utility package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "functions-framework",
    "google-cloud-functions",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "ARG", "C4", "DTZ", "EM", "ERA", "PD", "PGH", "PIE", "PL", "PT", "PTH", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "S", "D"]
ignore = ["EM101", "S101", "TID252"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"tests/**.py" = ["D100"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.mypy]
plugins = "pydantic.mypy"
exclude = [
    "build/"
]
